2016-09-14 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/mcs51/gen.c (isLiteralBit): fixed for long long,
	  (genReceive):	fixed stack smashing bug
	* support/regression/tests/test-p99-conformance.c: decreased restrict_buffer

2016-09-12 Philipp Klaus Krause <pkk AT spth.de>

	* device/include/stdbool.h,
	  src/mcs51/gen.c:
	  Standard-compliant _Bool for mcs51.

2016-09-08 Philipp Klaus Krause <pkk AT spth.de>

	* device/include/stdint.h:
	  Enable C99 typedefs for 64-bit types.

2016-09-07 Ben Shi <powerstudio1st AT 163 DOT com>

	* src/mcs51/gen.c
	  Improve longlong compatibility of mcs-51 on 32-bit hosts.

2016-09-03 Philipp Klaus Krause <pkk AT spth.de>

	* src/mcs51/gen.c:
	  Fixes for mcs51 long long on 32-bit hosts.

2016-08-30 Philipp Klaus Krause <pkk AT spth.de>

	* src/mcs51/gen.c:
	  Fixes for mcs51 long long on 32-bit hosts.

2016-08-28 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/gcc-torture-execute-20020506-1.c:
	  Disable test for ds390 that accidentially got enabled when enabled for mcs51.

2016-08-26 Philipp Klaus Krause <pkk AT spth.de>

	* src/mcs51/peep.c,
	  support/regression/tests/bug-2477.c,
	  support/regression/tests/gcc-torture-execute-20001031-1.c,
	  support/regression/tests/gcc-torture-execute-20020506-1.c,
	  support/regression/tests/gcc-torture-execute-20060127-1.c,
	  support/regression/tests/gcc-torture-execute-941015-1.c,
	  support/regression/tests/gcc-torture-execute-950512-1.c,
	  support/regression/tests/gcc-torture-execute-950612-1.c,
	  support/regression/tests/gcc-torture-execute-960402-1.c,
	  support/regression/tests/gcc-torture-execute-960801-1.c,
	  support/regression/tests/gcc-torture-execute-20000717-2.c,
	  support/regression/tests/gcc-torture-execute-20020402-3.c,
	  support/regression/tests/gcc-torture-execute-20050111-1.c,
	  support/regression/tests/gcc-torture-execute-950704-1.c:
	  Fix mcs51 peephole handling of long long parameters.