@@ -1,3 +1,9 @@
+2016-09-15 Ben Shi <powerstudio1st AT 163 DOT com>
+
+	* device/lib/isinf.c
+	* device/lib/isnan.c
+	  Improve compatibility.
+
 2016-09-14 Maarten Brock <sourceforge.brock AT dse.nl>
 
 	* src/mcs51/gen.c (isLiteralBit): fixed for long long,
